Fix radio on iPhone Safari

--- a/css/radio.css
+++ b/css/radio.css
@@ -1,3 +1,7 @@
+label.v-radio,
+.v-radio label {
+  -webkit-tap-highlight-color: transparent;
+}
 .v-radio {
   vertical-align: middle;
 }
@@ -6,11 +10,13 @@
   margin: 0 8px 0 2px;
   line-height: 1;
   outline: none;
+  border: none;
+  background: none;
+  vertical-align: middle;
 }
 .v-radio input:before {
   position: relative;
-  top: -4px;
-  display: block;
+  display: inline-block;
   content: '';
   width: 1em;
   height: 0.4em;
